--- a/README.org
+++ b/README.org
@@ -65,6 +65,7 @@ Blog from Org mode to WordPress.
     -  [[#why-isnt-the-package-name-org2wordpress][Why Isn't The Package Name Org2WordPress?]]
     -  [[#what-is-metaweblog-and-why-is-it-in-org2blog][What Is MetaWeblog And Why Is It In Org2Blog?]]
     -  [[#why-does-org2blog-use-both-the-xml-rpc-metaweblog-and-wordpress-api][Why does Org2Blog Use Both The XML-RPC MetaWeblog and WordPress API]]
+    -  [[#how-does-org2blog-manage-autoloads?][How does Org2Blog manage autoloads?]]
 -  [[#sample-posts][Sample Posts]]
   -  [[#buffer-post][Buffer Post]]
   -  [[#subtree-post][Subtree Post]]
@@ -1030,9 +1031,30 @@ Both APIs are required to get the job done.
 
 For historical reasons the WordPress API client is implemented inside of =metaWeblog=.
 
+*** How does Org2Blog manage autoloads?
+
+Preemptive TL;DR: It doesn't—Packages are not supposed to manage autoloads.
+
+[[https://www.gnu.org/software/emacs/manual/html_node/elisp/Autoload.html][The autoload facility]] delays loading Elisp files until their contents are actually used improving Emacs startup times. To state it even more simply: it is how to lazy-load packages. Anytime you see code prefixed with [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Autoload.html#index-autoload-cookie][the default magic autoload comment]] ~;;;###autoload~ you can use it (for example call a function) before the its package is loaded. Org2Blog has lots of ~autoload~'ed functions. Emacs learns about them by reading the autoloads file. There are three entities that /can/ manage the autoloads file along with their decision of whether or not they will:
+
+- Org2Blog: Won't do it
+- You: Should not do it
+- A Package Manager: Will do it by design—And Easily
+
+Org2Blog does not manage an autoloads file because packages are not supposed to manage it. Usage and management of an autoloads file is a personal decision made by the user or their choice package manager. By design packages *never* assume the responsibility. For reference at the moment there are 5,258 packages in MELPA and only one of them includes an autoloads file. Like anything there are exceptions to the rule but Org2Blog isn't one of them. Another entity who can manage the autoloads file is you.
+
+With an inordinate amount of effort you can create the autoloads file and load it yourself. However it is likely not worth the effort. Disk drives today are fast. Disk drives of 20 years ago are almost as fast (this applies to whatever the current year is). Drive speed improvements take care of the load time issue. That leaves the time required to manage the autoloads file. If you want to manage the autoloads file yourself you need to create, load it, and update it whenever autoloaded values are changed. It is even more work better left to a program. If you insist then have at it. Otherwise make your life easy and let the package manager do it for you.
+
+Package Managers by design are responsible for creating the autoloads file for you. It requires no effort and likely zero customization on your part. It is that simpler. Even better though would be something simpler.
+
+The simplest way to handle autoloads is simply never to use them at all. There is essentially [[https://www.gnu.org/software/emacs/manual/html_node/elisp/When-to-Autoload.html][never a good justification]] for using autoloads. There is almost always another way to achieve your goal. The worst part is that once people start relying on that features autoload behavior you can never remove it later on without creating pain for the user.
+
+The best code is the code that doesn't exist: that includes autoloads. Bit by bit Org2Blog will keep moving towards a future without them.
+
 * Sample Posts
 
 There are so many ways to work with posts. Here are some real-world examples.
+
 ** Buffer Post
 
 #+begin_src org
